--- a/.drone.yml
+++ b/.drone.yml
@@ -1,12 +1,18 @@
-build:
-  image: golang:1.5
-  environment:
-    - GO15VENDOREXPERIMENT=1
-    - CGO_ENABLED=0
-  commands:
-    - go test -cover -coverprofile coverage.out
+workspace:
+  base: /go
+  path: src/github.com/travlr/drone-with-go
 
-publish:
-  coverage:
-    when:
-      branch: master
+pipeline:  
+  build:
+    image: golang:1.5
+    environment:
+      - GO15VENDOREXPERIMENT=1
+      - CGO_ENABLED=0
+    commands:
+      - go test -cover -coverprofile coverage.out
+
+#  publish:
+#    coverage:
+#      when:
+#        branch: master
+
