--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ pipeline:
   notify:
     image: drillster/drone-email
     host: smtp.gmail.com
-    port: 587
+    # port: 587
     # username: ${EMAIL_NAME_FLOSS}
     # password: ${EMAIL_PASSWORD_FLOSS}
     from: floss@prodatalab.com
